--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Primary Meta Tags -->
     <title>Flávio Freitas - Freelance Artist</title>
-    <link rel="icon" href="public/avatar.png">
+    <link rel="icon" href="avatar.png">
     <meta name="description"
         content="Artist | Social media: @flafdraws">
     <meta name="keywords"
