--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
 
     <!-- META TAGS -->
     <!-- Open Graph / Facebook -->
-    <meta property="og:url" content="https://flaviofs.github.io/commission/">
+    <meta property="og:url" content="https://flafdraws.github.io/art/">
     <meta property="og:site_name" content="flafdraws">
     <meta property="og:title" content="Flávio Freitas - Commissions - @flafdraws">
-    <meta property="og:image" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
     <meta property="og:description"
         content="Freelance Artist | Social media: @flafdraws">
     <meta property="og:type" content="website">
-    <meta property="og:image:secure_url" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Flávio Freitas - Commissions - @flafdraws">
     <meta name="twitter:description"
         content="Artist | Social media: @flafdraws">
-    <meta name="twitter:image" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
-    <meta name="image" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
-    <meta name="twitter:url" content="https://flaviofs.github.io/commission/">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
+    <meta name="image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
+    <meta name="twitter:url" content="https://flafdraws.github.io/art/">
     <meta name="og_twitter_card" content="summary_large_image">
 
     <!-- Primary Meta Tags -->
-    <title>Flávio Freitas - Freelance Artist</title>
-    <link rel="icon" href="/art/avatar.png">
+    <title>Flávio Freitas - Freelance Illustrator</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/flafdraws/gallery/main/ui/avatar.jpg">
     <meta name="description"
         content="Artist | Social media: @flafdraws">
     <meta name="keywords"
