--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
 
     <!-- META TAGS -->
     <!-- Open Graph / Facebook -->
-    <meta property="og:url" content="https://flaviofs.github.io/commission/">
+    <meta property="og:url" content="https://flafdraws.github.io/art/">
     <meta property="og:site_name" content="flafdraws">
     <meta property="og:title" content="Flávio Freitas - Commissions - @flafdraws">
-    <meta property="og:image" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
     <meta property="og:description"
         content="Freelance Artist | Social media: @flafdraws">
     <meta property="og:type" content="website">
-    <meta property="og:image:secure_url" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Flávio Freitas - Commissions - @flafdraws">
     <meta name="twitter:description"
         content="Artist | Social media: @flafdraws">
-    <meta name="twitter:image" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
-    <meta name="image" content="https://i.postimg.cc/yd4DNr4X/enpitsu-og.png">
-    <meta name="twitter:url" content="https://flaviofs.github.io/commission/">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
+    <meta name="image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
+    <meta name="twitter:url" content="https://flafdraws.github.io/art/">
     <meta name="og_twitter_card" content="summary_large_image">
 
     <!-- Primary Meta Tags -->
-    <title>Flávio Freitas - Freelance Artist</title>
-    <link rel="icon" href="/art/avatar.png">
+    <title>Flávio Freitas - Freelance Illustrator</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/flafdraws/gallery/main/ui/avatar.jpg">
     <meta name="description"
         content="Artist | Social media: @flafdraws">
     <meta name="keywords"
@@ -39,8 +39,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,400&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <script type="module" crossorigin src="/art/assets/index.84adad82.js"></script>
-    <link rel="stylesheet" href="/art/assets/index.211681ff.css">
+    <script type="module" crossorigin src="/art/assets/index.f1d0d184.js"></script>
+    <link rel="stylesheet" href="/art/assets/index.d6ff7cf3.css">
   </head>
   <body>
     <div id="app"></div>
