sns share title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:url" content="https://flafdraws.github.io/art/">
     <meta property="og:site_name" content="flafdraws">
-    <meta property="og:title" content="Flávio Freitas - Commissions - @flafdraws">
+    <meta property="og:title" content="Flávio Freitas Art - @flafdraws">
     <meta property="og:image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
     <meta property="og:description"
         content="Freelance Artist | Social media: @flafdraws">
@@ -17,7 +17,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Flávio Freitas - Commissions - @flafdraws">
+    <meta name="twitter:title" content="Flávio Freitas Art - @flafdraws">
     <meta name="twitter:description"
         content="Artist | Social media: @flafdraws">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/flafdraws/gallery/main/banner/banner-og.jpg">
