--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,400&display=swap" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <script type="module" crossorigin src="/art/assets/index.f1d0d184.js"></script>
-    <link rel="stylesheet" href="/art/assets/index.d6ff7cf3.css">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7f594141b0.js" crossorigin="anonymous"></script>
+    <script type="module" crossorigin src="/art/assets/index.dce2f307.js"></script>
+    <link rel="stylesheet" href="/art/assets/index.4c8379e6.css">
   </head>
   <body>
     <div id="app"></div>
